[fix] unreadable labels and add auto width buttons and new reset styles

--- a/assets/opstools/AppBuilder/AppBuilder.css
+++ b/assets/opstools/AppBuilder/AppBuilder.css
@@ -851,6 +851,10 @@ div[view_id='ab-interface-layout-page'] .webix_list_item,
 	color: #666 !important;
 	box-shadow: none !important;
 }
+.ab-reset-button button {
+	background: #BBB;
+	border-color: #AAA;
+}
 .ab-cancel-button button {
 	background: transparent !important;
 	color: #AAA;
